# moma

./: .gitignore  README.md  myst.yml  pyproject.toml  syllabus.md
.github/workflows/: deploy.yml
assignments/demo/: demo_student.ipynb
notebooks/: README.md  advanced_consumption.md  consumption_two_period.md  dsge.md  endogenous_growth.md  envelope_crra.md  investment_qmodel.md  neoclassical_growth.md  olg_extra.md  random_walk_cons_fn.md  references.bib  risk_and_consumption.md
notes/: README.md  lecture_01.md  lecture_02.md  lecture_03.md  lecture_04.md  lecture_05.md  lecture_06.md  lecture_07.md  lecture_08.md  lecture_09.md  lecture_10.md  lecture_11.md  lecture_12.md  lecture_13.md
quantecon/: README.md  need_for_speed.md  numpy.md  references.bib
quantecon/consumption/: perm_income.md
quantecon/foundations/: matplotlib.md  numpy.md  scipy.md
quantecon/nonlinear/: olg.md
scripts/: UV_WINDOWS_TROUBLESHOOTING.md  diagnose-uv-windows.ps1  generate_branding.py  install-uv-windows.ps1
slides/: README.md
slides/m03/: intertemporal-choice-slides.qmd
slides/m04/: consumption-theory-slides.qmd
slides/m05/: advanced-consumption-slides.qmd
slides/m06/: risk-and-consumption-slides.qmd
slides/m07/: asset-pricing-slides.qmd
slides/m10/: investment-theory-slides.qmd
slides/m11/: growth-theory-slides.qmd  m11.py
slides/m12/: endogenous-growth-slides.qmd
slides/m13/: dsge-slides.qmd
theme/: dsge.scss  generate_branding.py
