[project]
name = "moma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab-myst>=2.6.0",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.8",
    "mystmd>=1.8.0",
    "nodejs>=0.1.1",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "pandas>=2.2.0",
    "quantecon>=0.10.1",
    "scipy>=1.17.0",
    "sympy>=1.13.0",
]

[tool.setuptools]
packages = []
